@@ -45,7 +45,7 @@ class qtype_multichoiceset_edit_form extends question_edit_form {
         $mform->addElement('select', 'answernumbering',
                 get_string('answernumbering', 'qtype_multichoice'),
                 qtype_multichoice::get_numbering_styles());
-        $mform->setDefault('answernumbering', 'abc');
+        $mform->setDefault('answernumbering', get_config('qtype_multichoice', 'answernumbering'));
 
         $this->add_per_answer_fields($mform, get_string('choiceno', 'qtype_multichoice', '{no}'),
                 null, max(5, QUESTION_NUMANS_START));
@@ -70,11 +70,12 @@ class qtype_multichoiceset_edit_form extends question_edit_form {
 
     /**
      * Get the list of form elements to repeat, one for each answer.
+     *
      * @param object $mform the form being built.
-     * @param $label the label to use for each option.
-     * @param $gradeoptions the possible grades for each answer.
-     * @param $repeatedoptions reference to array of repeated options to fill
-     * @param $answersoption reference to return the name of $question->options
+     * @param string $label the label to use for each option.
+     * @param array $gradeoptions the possible grades for each answer.
+     * @param array $repeatedoptions reference to array of repeated options to fill
+     * @param string $answersoption reference to return the name of $question->options
      *      field holding an array of answers
      * @return array of form fields.
      */
@@ -97,8 +98,8 @@ class qtype_multichoiceset_edit_form extends question_edit_form {
 
     /**
      * Create the form elements required by one hint.
-     * @param string $withclearwrong whether this quesiton type uses the 'Clear wrong' option on hints.
-     * @param string $withshownumpartscorrect whether this quesiton type uses the 'Show num parts correct' option on hints.
+     * @param bool $withclearwrong whether this question type uses the 'Clear wrong' option on hints.
+     * @param bool $withshownumpartscorrect whether this quesiton type uses the 'Show num parts correct' option on hints.
      * @return array form field elements for one hint.
      */
     protected function get_hint_fields($withclearwrong = false, $withshownumpartscorrect = false) {
